<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Hello, Android! 3e",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband3 for more book information.
-->
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:background="@color/background"
   android:layout_height="fill_parent"
   android:layout_width="fill_parent"
   android:padding="30dip"
   android:orientation="horizontal">
   <LinearLayout
      android:orientation="vertical"
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:layout_gravity="center">
      <TextView
         android:text="@string/title_bar"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="25dip"
         android:textSize="24.5sp" />
      <Button
         android:id="@+id/team_members_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/team_members_label" />
      <Button
      	 android:id="@+id/boggle_button"
      	 android:layout_width="fill_parent"
      	 android:layout_height="wrap_content"
      	 android:text="@string/boggle_label" />   
      <Button
         android:id="@+id/sudoku_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/sudoku_label" />
      <Button
         android:id="@+id/create_error_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/create_error_label" />
      <Button
         android:id="@+id/exit_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/exit_label" />
   </LinearLayout>
</LinearLayout>